--- a/config/locales/rapidfire_he.yml
+++ b/config/locales/rapidfire_he.yml
@@ -1,5 +1,10 @@
 he:
   rapidfire:
-    attempt:
+    attempts:
       header: "נא לענות על השאלות הבאות"
       save: "שמור"
+    questions:
+      header: "רשימת השאלות"
+      new: "שאלה חדשה"
+      question: "השאלה"
+
